@@ -9,6 +9,7 @@ export(addContaminantQC)
 export(addDPCoA)
 export(addDivergence)
 export(addDominant)
+export(addLDA)
 export(addMediation)
 export(addNMDS)
 export(addNotContaminantQC)
@@ -51,6 +52,7 @@ export(getDPCoA)
 export(getDominant)
 export(getExperimentCrossAssociation)
 export(getExperimentCrossCorrelation)
+export(getLDA)
 export(getMediation)
 export(getNMDS)
 export(getPrevalence)
@@ -148,6 +150,7 @@ exportMethods(addContaminantQC)
 exportMethods(addDivergence)
 exportMethods(addDominant)
 exportMethods(addHierarchyTree)
+exportMethods(addLDA)
 exportMethods(addMediation)
 exportMethods(addNotContaminantQC)
 exportMethods(addPerSampleDominantFeatures)
@@ -186,6 +189,7 @@ exportMethods(getDominant)
 exportMethods(getExperimentCrossAssociation)
 exportMethods(getExperimentCrossCorrelation)
 exportMethods(getHierarchyTree)
+exportMethods(getLDA)
 exportMethods(getMediation)
 exportMethods(getNMDS)
 exportMethods(getPrevalence)
