@@ -148,3 +148,4 @@ convertToPhyloseq
 + Changes in default taxonomy ranks; more ranks supported
 + Added Tito2024QMP dataset
 + Added convertToBIOM
++ new methods getLDA and addLDA for LDA ordination with feature loadings computation
